Added better default JVM args for `server` module `application` plugin